# apuntes

./: main.py  manage.py  pyproject.toml
apuntes/: asgi.py  settings.py  urls.py  wsgi.py
gestion/: __init__.py  admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
gestion/management/commands/: seed_data.py
gestion/migrations/: 0001_initial.py  0002_tag_apunte_favorito_apunte_relacionado_a_apunte_tags.py
gestion/static/css/: custom.css
gestion/static/js/: dashboard.js  detail.js  editor.js  theme.js
gestion/templates/gestion/: apunte_detail.html  apunte_export_html.html  apunte_export_pdf.html  apunte_form.html  base.html  dashboard.html
gestion/templatetags/: __init__.py  custom_filters.py
