[project]
name = "apuntes"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "docutils>=0.23",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "pillow>=12.3.0",
    "psycopg>=3.3.4",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "django-filter>=25.1",
    "weasyprint>=65.1",
]
